--- a/Tugas_Akhir_Latex_Source/halaman-depan/abstract.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/abstract.tex
@@ -37,13 +37,13 @@
 
 {\singlespacing\indent% 
 \textit{}
-This computational study investigates the combined effect of thermal agitation and antisite defects (N$_B$, B$_N$) on the electronic and magnetic properties of monolayer hexagonal boron nitride (hBN). Using a multi-scale approach, molecular dynamics (MD) simulations were employed to generate thermally equilibrated structures at 800 K, 1100 K, and 1225 K. These structures were subsequently analyzed using Density Functional Theory (DFT) to determine their band structure and magnetic states. The results reveal distinct, defect-specific behaviors. While pure hBN exhibits a conventional band gap redshift with temperature, the N$_B$ defect induces an anomalous blueshift. Most significantly, the B$_N$ defect is found to trigger temperature-activated $d^0$ magnetism, where the magnetic moment strengthens at higher temperatures. This suggests a strong coupling mechanism between lattice vibrations and spin, highlighting a pathway for tuning hBN properties via thermal and defect engineering.
+This computational study investigates the combined effect of thermal agitation and antisite defects (N$_B$, B$_N$) on the electronic and magnetic properties of monolayer hexagonal boron nitride (hBN). Using a multi-scale approach, molecular dynamics (MD) simulations were employed to generate thermally equilibrated structures at 800 K, 1100 K, and 1225 K. These structures were subsequently analyzed using Density Functional Theory (DFT) to determine their band structure and magnetic states. The results reveal distinct, defect-specific behaviors. While pure hBN exhibits a conventional band gap redshift with temperature, the N$_B$ defect induces an anomalous blueshift. Most significantly, the B$_N$ defect is found to trigger temperature-activated $d^0$ magnetism, where the magnetic moment strengthens at higher temperatures because temperature rise affect structure stability dan defect formation on hBN. This suggests a strong coupling mechanism between lattice vibrations and spin, highlighting a pathway for tuning hBN properties via thermal and defect engineering.
 }
 
 %---------------------------------------------------------------------
 
 \vspace{5mm}
 
-\noindent \textbf{Keywords: hexagonal boron nitride; molecular dynamics; density functional theory; thermal effects; point defects; d0 magnetism.} \textit{} % Kata kunci dalam bahasa Inggris
+\noindent \textbf{Keywords: hexagonal boron nitride; molecular dynamics; density functional theory; thermal effects; point defects.} \textit{} % Kata kunci dalam bahasa Inggris
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
