--- a/Tugas_Akhir_Latex_Source/informasi.tex
+++ b/Tugas_Akhir_Latex_Source/informasi.tex
@@ -10,7 +10,7 @@
 } 
 %=====================================================================
 % Judul Tugas Akhir
-\newcommand{\judulTA}{
+\newcommand{\judulTA}{%
 Analisis Sifat Elektronik dan Magnetik dari Struktur Boron Nitride heksagonal Akibat Perlakuan Termal Melalui Studi Teori Densitas Kerapatan dan Dinamika Molekul % Tuliskan judul dalam bahasa Indonesia
 }
 \newcommand{\judulTAInggris}{
@@ -18,7 +18,7 @@ Analisis Sifat Elektronik dan Magnetik dari Struktur Boron Nitride heksagonal Ak
 } 
 %=====================================================================
 % Nama Mahasiswa
-\newcommand{\namaMahasiswa}{
+\newcommand{\namaMahasiswa}{%
     Hanandaru Mahaputra Purwanto% Tuliskan nama lengkap mahasiswa/(i)
 } 
 %=====================================================================
@@ -50,15 +50,15 @@ Analisis Sifat Elektronik dan Magnetik dari Struktur Boron Nitride heksagonal Ak
 %=====================================================================
 % Informasi Kepala Departemen
 \newcommand{\namaKaDep}{
-    Dr. Drs. Gatut Yudoyono, M.T.% Tuliskan nama Kepala Departemen
+    Dr. Lila Yuwana, M.Si.% Tuliskan nama Kepala Departemen
 }
 \newcommand{\nipKaDep}{
-    196406161989031004% Tuliskan NIP Kepala Departemen
+    197509082000031001% Tuliskan NIP Kepala Departemen
 }
 %=====================================================================
 % Informasi Kampus
 %=====================================================================
-\newcommand{\namaDepartemen}{
+\newcommand{\namaDepartemen}{%
 Departemen Fisika% Tuliskan nama Departemen dalam bahasa Indonesia
 }
 \newcommand{\namaDepartemenInggris}{
