--- a/Tugas_Akhir_Latex_Source/konten/bab02.tex
+++ b/Tugas_Akhir_Latex_Source/konten/bab02.tex
@@ -71,21 +71,21 @@ Material ini telah menjadi fokus riset intensif sejak isolasi grafena pada tahun
 
 \subsection{Deskripsi Material 2D}
 Material 2D memiliki karakteristik yang membedakannya dari material tiga dimensi (3D).
-Secara fisik, material 2D menunjukkan kestabilan yang tinggi meskipun hanya tersusun dari satu atau beberapa lapisan atom, di mana fenomena\textbf{pengekangan kuantum (quantum confinement, PK)} menjadi sangat dominan.
+Secara fisik, material 2D menunjukkan kestabilan yang tinggi meskipun hanya tersusun dari satu atau beberapa lapisan atom, di mana fenomena pengekangan kuantum (\textit{quantum confinement}, PK) menjadi sangat dominan.
 Struktur ini memungkinkan pengamatan efek kuantum dalam skala makroskopik, sehingga mengubah properti elektronik seperti mobilitas pembawa muatan dan pita energi.
-Sebagai contoh, grafena memiliki struktur \textbf{sarang lebah (honeycomb, SL)} yang simetris yang menghasilkan pita konik (Dirac cones) pada titik K di Brillouin zone, sehingga elektron berperilaku seperti partikel dengan massa nol \citep{CastroNeto2009}.
+Sebagai contoh, grafena memiliki struktur sarang lebah (\textit{honeycomb}, SL) yang simetris yang menghasilkan pita konik (Dirac cones) pada titik K di Brillouin zone, sehingga elektron berperilaku seperti partikel dengan massa nol \citep{CastroNeto2009}.
 Sejarah material 2D dimulai dari penemuan grafena dan berlanjut pada sintesis material seperti MoS\(_2\), WS\(_2\), dan hBN.
 Metode isolasi mekanik, Deposisi Uap Kimia (CVD) serta eksfoliasi kimia telah banyak digunakan untuk memperoleh lapisan atom tunggal dengan kualitas kristal yang tinggi.
 Studi awal berfokus pada grafena, namun perkembangan teknologi sintesis mendorong riset pada material lain dengan sifat semikonduktor atau isolator, seperti hBN yang memiliki pita energi lebar \citep{Geim2013}.
 Material 2D umumnya ditandai dengan:
 \begin{itemize}
     \item \textbf{Dimensi Terbatas:} Ketebalan material mendekati satu lapisan atom.
-    \item \textbf{Anisotropi:} Sifat fisik seperti konduktivitas termal dan mekanik sangat bergantung pada arah \emph{dalam bidang (IP)} dan \emph{lintas bidang (OP)}.
-    \item \textbf{Efek Kuantum:} Struktur elektron menunjukkan efek \textbf{pengekangan kuantum (PK)} yang kuat, yang mengubah densitas keadaan elektron dan menghasilkan fenomena seperti efek Hall kuantum \citep{Das2015}.
+    \item \textbf{Anisotropi:} Sifat fisik seperti konduktivitas termal dan mekanik sangat bergantung pada arah dalam bidang (\emph{in-plane}, IP) dan lintas bidang (\emph{out-of-plane}, OP)).
+    \item \textbf{Efek Kuantum:} Struktur elektron menunjukkan efek PK yang kuat, yang mengubah densitas keadaan elektron dan menghasilkan fenomena seperti efek Hall kuantum \citep{Das2015}.
 \end{itemize}
 
 \subsection{Sifat Struktural dan Mekanik}
-Material 2D memiliki kekakuan \emph{dalam bidang (IP)} yang sangat tinggi meskipun fleksibilitas \emph{lintas bidang (OP)} relatif besar.
+Material 2D memiliki kekakuan IP yang sangat tinggi meskipun fleksibilitas lintas bidang (OP) relatif besar.
 Struktur kristal dua dimensi yang sempurna menghasilkan simetri spasial yang tinggi dan kestabilan termodinamik yang mendasar.
 Secara matematis, energi elastis \( U \) dapat dihitung melalui pendekatan teori elastisitas dua dimensi:
 \begin{equation}
@@ -113,7 +113,7 @@ Untuk grafena, model relativistik menghasilkan hubungan linier:
     E(\mathbf{k}) = \hbar v_F |\mathbf{k}|,
 \end{equation}
 dengan \( v_F \) adalah kecepatan Fermi, yang menghasilkan sifat konduktivitas tinggi serta mobilitas pembawa muatan yang ekstrem \citep{Novoselov2004,CastroNeto2009}.
-Teori pita energi untuk material 2D umumnya dikaji dengan menggunakan metode DFT atau model \textbf{ikatan erat (tight-binding, TB)}.
+Teori pita energi untuk material 2D umumnya dikaji dengan menggunakan metode DFT atau model ikatan erat (\emph{tight-binding}, TB).
 Model ikatan erat untuk grafena, misalnya, menghasilkan persamaan pita:
 \begin{equation}
     E(\mathbf{k}) = \pm t \sqrt{1 + 4\cos\left(\frac{\sqrt{3}k_y a}{2}\right)\cos\left(\frac{k_x a}{2}\right) + 4\cos^2\left(\frac{k_x a}{2}\right)},
@@ -122,7 +122,7 @@ di mana \( t \) adalah parameter \emph{hopping} dan \( a \) adalah parameter kis
 Persamaan ini menunjukkan titik Dirac dan konik di sekitar titik K yang memberikan kontribusi pada sifat semimetalik grafena \citep{CastroNeto2009}.
 
 \subsection{Sifat Termal dan Transportasi}
-Secara termal, material 2D menunjukkan konduktivitas termal yang tinggi di bidang \emph{dalam bidang (IP)} karena adanya fonon dengan laju penyebaran tinggi.
+Secara termal, material 2D menunjukkan konduktivitas termal yang tinggi di bidang IP karena adanya fonon dengan laju penyebaran tinggi.
 Konduktivitas termal \(\kappa\) dapat dihitung menggunakan persamaan Boltzmann:
 \begin{equation}
     \kappa = \frac{1}{A} \sum_{\lambda} C_{\lambda} v_{\lambda}^2 \tau_{\lambda},
@@ -162,10 +162,11 @@ Pada kedua skema, bola kuning merepresentasikan atom Boron dan bola biru merepre
     \label{fig:reciprocal_bz_hbn}
 \end{figure}
 
-hBN tersusun dari lapisan atom boron (B) dan nitrogen (N) yang terikat secara kovalen dalam struktur \textbf{sarang lebah (honeycomb, SL)}. Setiap atom boron terikat dengan tiga atom nitrogen dan sebaliknya, menghasilkan susunan yang hampir identik dengan grafena, dengan perbedaan jenis atom. Parameter kisi hBN dapat dinyatakan sebagai:
-\[
+hBN tersusun dari lapisan atom boron (B) dan nitrogen (N) yang terikat secara kovalen dalam struktur  SL. Setiap atom boron terikat dengan tiga atom nitrogen dan sebaliknya, menghasilkan susunan yang hampir identik dengan grafena, dengan perbedaan jenis atom. Parameter kisi hBN dapat dinyatakan sebagai:
+\begin{equation}
 a = b \approx 2.50 \, \text{\AA}, \quad \gamma = 120^\circ.
-\]
+\end{equation}
+
 Persamaan ini mendasari simetri ruang dan menentukan bentuk Zona Brillouin yang juga berbentuk \emph{hexagonal}.
 
 Struktur sarang lebah hBN, meskipun secara topologis identik dengan grafena, memiliki basis dua atom yang berbeda (satu B dan satu N) pada kisi Bravais segitiga. Vektor kisi primitif di ruang nyata dapat didefinisikan sebagai $\mathbf{a}_1 = a(1, 0)$ dan $\mathbf{a}_2 = a(1/2, \sqrt{3}/2)$. Dengan menggunakan hubungan definisi, vektor kisi resiprokal dapat diturunkan menjadi $\mathbf{b}_1 = \frac{2\pi}{a}(1, -1/\sqrt{3})$ dan $\mathbf{b}_2 = \frac{2\pi}{a}(0, 2/\sqrt{3})$. Vektor-vektor ini membentuk kisi resiprokal yang juga heksagonal, namun terotasi 30° relatif terhadap kisi langsung. Zona Brillouin pertama yang dibentuk dari konstruksi Wigner-Seitz pada kisi resiprokal ini adalah heksagon yang ditunjukkan pada Gambar \ref{fig:reciprocal_bz_hbn}.
@@ -176,7 +177,7 @@ Pelanggaran simetri ini memiliki konsekuensi langsung pada struktur elektronik. 
 
 Sifat celah pita yang besar dan langsung ini secara langsung menjelaskan mengapa hBN adalah isolator listrik yang sangat baik dan transparan terhadap cahaya tampak. Hal ini menjadikannya substrat yang ideal untuk perangkat elektronik berbasis grafena, karena dapat meminimalkan hamburan muatan dan menjaga mobilitas elektron yang tinggi. Lebih jauh lagi, sifat optiknya yang unik di rentang ultraviolet dalam membuatnya menjadi kandidat material yang menjanjikan untuk aplikasi optoelektronik canggih, seperti dioda pemancar cahaya (LED) dan detektor di spektrum UV-dalam. Prediksi teoretis mengenai struktur pita ini, yang dihitung menggunakan metode seperti DFT, dapat diverifikasi secara langsung melalui teknik eksperimental seperti \emph{Angle-Resolved Photoemission Spectroscopy} (ARPES), yang mampu memetakan dispersi energi elektron sebagai fungsi dari momentumnya di dalam Zona Brillouin.
 
-Struktur ini sangat stabil secara termodinamika dan menunjukkan anisotropi yang jelas antara arah \emph{dalam bidang (IP)} dan \emph{lintas bidang (OP)}. Secara matematis, fungsi gelombang atomik dalam hBN dapat dijelaskan dengan basis fungsi Bloch. Jika \(\psi_{\mathbf{k}}(\mathbf{r})\) merupakan fungsi Bloch, maka:
+Struktur ini sangat stabil secara termodinamika dan menunjukkan anisotropi yang jelas antara arah IP dan OP. Secara matematis, fungsi gelombang atomik dalam hBN dapat dijelaskan dengan basis fungsi Bloch. Jika \(\psi_{\mathbf{k}}(\mathbf{r})\) merupakan fungsi Bloch, maka:
 \begin{equation}
     \psi_{\mathbf{k}}(\mathbf{r}) = e^{i\mathbf{k}\cdot\mathbf{r}} u_{\mathbf{k}}(\mathbf{r}),
 \end{equation}
@@ -203,7 +204,7 @@ Persamaan elastisitas linear dalam hBN dapat diekspresikan sebagai:
     \sigma_{ij} = C_{ijkl}\epsilon_{kl},
 \end{equation}
 di mana \(C_{ijkl}\) merupakan tensor elastisitas dan \(\epsilon_{kl}\) adalah tensor regangan.
-Sifat termal hBN yang tinggi secara konduktivitas \emph{dalam bidang (IP)} mendukung aplikasinya sebagai pendingin pasif pada perangkat nanoelektronik \citep{Zhang2020}.
+Sifat termal hBN yang tinggi secara konduktivitas IP mendukung aplikasinya sebagai pendingin pasif pada perangkat nanoelektronik \citep{Zhang2020}.
 Meskipun hBN secara intrinsik tidak menunjukkan momen magnetik, keberadaan cacat titik atau doping dengan unsur logam dapat menginduksi sifat magnetik lokal.
 Model magnetik untuk cacat dapat dijelaskan melalui Hamiltonian Heisenberg:
 \begin{equation}
@@ -227,7 +228,7 @@ Hasil simulasi dan eksperimen menunjukkan minimnya cacat antarmuka pada struktur
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Studi Terdahulu Terkait hBN}
 Bagian ini memaparkan tinjauan literatur yang mendalam mengenai penelitian eksperimental dan komputasional terkait hBN.
-Studi-studi terdahulu mencakup pendekatan sintetis, karakterisasi struktur, perhitungan elektronik, serta simulasi dinamika molekuler dan DFT untuk memahami defect, cacat, dan modifikasi sifat material hBN.
+Studi-studi terdahulu mencakup pendekatan sintetis, karakterisasi struktur, perhitungan elektronik, serta simulasi dinamika molekuler dan DFT untuk memahami cacat, cacat, dan modifikasi sifat material hBN.
 
 \subsection{Tinjauan Eksperimental}
 Penelitian eksperimental mengenai hBN telah melibatkan teknik sintesis seperti eksfoliasi mekanik, CVD, dan epitaksi uap kimia.
@@ -237,20 +238,20 @@ Metode Raman spectroscopy telah digunakan untuk mengidentifikasi mode vibrasi kh
 Pengukuran intensitas puncak Raman serta pergeseran frekuensi mode \(E_{2g}\) menjadi indikator utama kualitas kristal \citep{Wang2017}.
 Teknik TEM memungkinkan visualisasi struktur atomik hBN dengan resolusi sub-ångström.
 Pengukuran konduktivitas termal dan respon magnetik hBN juga telah dilakukan secara eksperimental.
-Teknik termal seperti time-domain thermoreflectance (TDTR) digunakan untuk mengukur konduktivitas termal \emph{dalam bidang (IP)}, sedangkan studi magnetik dilakukan dengan magnetometri SQUID untuk mengidentifikasi pengaruh cacat terhadap sifat magnetik \citep{Zhang2020}.
+Teknik termal seperti time-domain thermoreflectance (TDTR) digunakan untuk mengukur konduktivitas termal IP, sedangkan studi magnetik dilakukan dengan magnetometri SQUID untuk mengidentifikasi pengaruh cacat terhadap sifat magnetik \citep{Zhang2020}.
 
 \subsection{Tinjauan Teoritis dan Komputasional}
-Pendekatan teoretis pada hBN melibatkan perhitungan DFT dan simulasi MD untuk memodelkan struktur elektronik, interaksi antar atom, dan dinamika defect.
+Pendekatan teoretis pada hBN melibatkan perhitungan DFT dan simulasi MD untuk memodelkan struktur elektronik, interaksi antar atom, dan dinamika cacat.
 Studi oleh \citep{Lele2022} menggunakan ReaxFF-based molecular dynamics simulations untuk memprediksi morfologi domain hBN pada substrat nikel.
-Metode ini melibatkan parameterisasi potensial reaktif yang memungkinkan simulasi reaksi kimia dan dinamika permukaan secara real-time.
+Metode ini melibatkan parameterisasi potensial reaktif yang memungkinkan simulasi reaksi kimia dan dinamika permukaan secara \emph{real-time}.
 Dalam pendekatan DFT, persamaan Kohn-Sham digunakan untuk menghitung distribusi elektron dan energi total sistem hBN.
 Metode ini diaplikasikan untuk mempelajari cacat titik, impuritas, dan efek doping.
-Sebagai contoh, perhitungan pertama-prinsip menunjukkan bahwa substitusi atom atau vacancy dapat menghasilkan keadaan elektronik baru yang mempengaruhi gap energi dan sifat magnetik lokal \citep{Zhang2020}.
+Sebagai contoh, perhitungan pertama-prinsip menunjukkan bahwa substitusi atom atau kekosongan dapat menghasilkan keadaan elektronik baru yang mempengaruhi gap energi dan sifat magnetik lokal \citep{Zhang2020}.
 Sebuah database densitas muatan yang \emph{representation-independent} telah dikembangkan untuk material kristalin, memfasilitasi perbandingan hasil perhitungan DFT dari berbagai metode dan potensial semu.
 Pendekatan ini memverifikasi konsistensi data elektronik antara eksperimen dan simulasi, sehingga menjadi alat yang berguna dalam riset material hBN \citep{Shen2022}.
 
 \subsection{Studi tentang Cacat dan Impuritas pada hBN}
-Penelitian mengenai cacat pada hBN sangat penting karena defect dapat mengubah sifat elektronik dan magnetik material.
+Penelitian mengenai cacat pada hBN sangat penting karena cacat dapat mengubah sifat elektronik dan magnetik material.
 Berbagai studi telah menginvestigasi cacat titik seperti vacancy, interstisial, dan substitusi menggunakan simulasi DFT dan MD.
 Hasil simulasi menunjukkan bahwa cacat dapat memicu keadaan lokal yang magnetik atau memodifikasi distribusi densitas elektron, sehingga berimplikasi pada aplikasi spintronik \citep{Zhang2020}.
 Model cacat pada hBN dapat dijelaskan melalui pendekatan Hamiltonian modifikasi, dengan memasukkan tambahan potensial cacat \(V_d(\mathbf{r})\) ke dalam persamaan Kohn-Sham:
@@ -287,7 +288,7 @@ Gaya ini dihasilkan dari gradien negatif fungsi energi potensial total:
 \begin{equation}
     \mathbf{F}_i = -\nabla_i U(\mathbf{r}_1, \mathbf{r}_2, \ldots, \mathbf{r}_N).
 \end{equation}
-Pendekatan ini mengasumsikan bahwa interaksi antar partikel dapat direpresentasikan oleh fungsi potensial \( U \), yang biasanya merupakan jumlah kontribusi dari interaksi dua badan, tiga badan, dan seterusnya.
+Pendekatan ini mengasumsikan bahwa interaksi antar partikel dapat direpresentasikan oleh fungsi potensial \( U \), yang biasanya merupakan jumlah kontribusi dari interaksi dua sistem, tiga sistem, dan seterusnya.
 Secara konsep, hal ini juga menyiratkan bahwa hukum kekekalan energi berlaku selama integrasi persamaan gerak, sehingga penggunaan algoritma integrasi yang konservatif, seperti algoritma Verlet, sangat esensial \citep{Allen1989}.
 
 \subsection{Medan Gaya dan Potensial Interaksi}
@@ -374,7 +375,7 @@ dan versi \emph{velocity Verlet} yang juga menghitung kecepatan secara eksplisit
     \mathbf{v}(t+\Delta t) &= \mathbf{v}(t) + \frac{\mathbf{F}(t) + \mathbf{F}(t+\Delta t)}{2m}\Delta t, \\
     \mathbf{r}(t+\Delta t) &= \mathbf{r}(t) + \mathbf{v}(t)\Delta t + \frac{\mathbf{F}(t)}{2m}\Delta t^2.
 \end{align}
-Algoritma ini didasarkan pada pemisahan operator Liouville yang menjaga sifat-simetri waktu (time-reversibility) dan simplektisitas, yang secara matematis memastikan bahwa volume ruang fase tetap terkonservasi.
+Algoritma ini didasarkan pada pemisahan operator Liouville yang menjaga sifat-simetri waktu (\emph{time-reversibility}) dan simplektisitas, yang secara matematis memastikan bahwa volume ruang fase tetap terkonservasi.
 Meskipun solusi numerik hanya mendekati lintasan eksak, algoritma Verlet secara efektif mempertahankan "Hamiltonian bayangan" yang konstan, sehingga tidak terjadi drift energi selama simulasi \citep{Allen1989}.
 
 \subsection{Pengaturan Temperatur: Thermostat dan Barostat}
@@ -393,7 +394,7 @@ Selain thermostat, penggunaan barostat juga penting untuk mensimulasikan sistem 
 Implementasi barostat biasanya melibatkan modifikasi pada volume sistem dan parameter interaksi, sehingga menjaga kestabilan tekanan selama simulasi.
 
 \subsection{Implementasi Simulasi dengan LAMMPS}
-LAMMPS (Large-scale Atomic/Molecular Massively Parallel Simulator) merupakan salah satu paket perangkat lunak MD yang paling populer.
+LAMMPS (\emph{Large-scale Atomic/Molecular Massively Parallel Simulator}) merupakan salah satu paket perangkat lunak MD yang paling populer.
 LAMMPS mendukung berbagai model potensial, termasuk potensial reaktif seperti ReaxFF, serta algoritma integrasi seperti Verlet dan Nose-Hoover.
 Keunggulan LAMMPS antara lain:
 \begin{itemize}
@@ -427,12 +428,12 @@ Pendekatan praktis ini diilustrasikan dalam berbagai studi kasus, di mana MD tid
 Teknik-teknik ini telah terbukti efektif dalam berbagai aplikasi, mulai dari simulasi protein hingga studi material dua dimensi, sebagaimana ditunjukkan dalam presentasi dan literatur terbaru \citep{Rapaport2004}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Density Functional Theory (DFT)}
-Density Functional Theory (DFT) merupakan salah satu metode komputasi kuantum yang paling banyak digunakan dalam studi struktur elektronik material.
+\section{ (DFT)}
+ Teori Fungsional Kerapatan (\emph{Density Functional Theory}, DFT) merupakan salah satu metode komputasi kuantum yang paling banyak digunakan dalam studi struktur elektronik material.
 Metode ini berfokus pada penggunaan densitas elektron \(\rho(\mathbf{r})\) sebagai variabel fundamental, bukan fungsi gelombang banyak partikel yang bergantung pada koordinat individual setiap elektron.
 Dengan demikian, DFT menawarkan cara yang lebih efisien dalam menangani sistem dengan jumlah partikel yang besar, sekaligus memberikan akurasi yang memadai untuk banyak aplikasi dalam fisika material dan kimia komputasi \citep{Kohn1965, Martin2004}.
 Pendekatan DFT telah merevolusi studi material karena mengurangi kompleksitas masalah banyak partikel melalui penggunaan prinsip-prinsip teorema Hohenberg-Kohn dan persamaan Kohn-Sham.
-Meski demikian, keberhasilan DFT sangat bergantung pada pemilihan fungsional pertukaran-korelasi (exchange-correlation functional) yang tepat.
+Meski demikian, keberhasilan DFT sangat bergantung pada pemilihan fungsional pertukaran-korelasi (\emph{exchange-correlation functional}) yang tepat.
 Oleh karena itu, pemahaman mendalam terhadap dasar-dasar teoritis dan persamaan-persaamaan yang digunakan sangat penting bagi para peneliti.
 
 \subsection{Persamaan Schrödinger}
@@ -509,6 +510,14 @@ Pendekatan ini sangat revolusioner karena memungkinkan penerapan metode variatio
 Berbagai metode numerik, seperti skema iteratif untuk mencapai self-consistency, digunakan untuk menyelesaikan persamaan Kohn-Sham sehingga solusi densitas elektron yang optimal dapat diperoleh.
 
 \subsection{Fungsional Pertukaran-Korelasi (XC)}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.9\textwidth]{gambar/jacob_ladder}
+    \caption{Tangga Jacob dari pendekatan fungsional kerapatan terhadap energi korelasi-pertukaran. \citep{perdew2005}}
+    \label{fig:xc_jacob_ladder}
+\end{figure}
+
 Fungsional pertukaran-korelasi \(E_{xc}[\rho]\) adalah komponen kunci dalam DFT karena mengkompensasi efek pertukaran dan korelasi yang tidak dapat diakomodasi secara eksplisit dalam persamaan Kohn-Sham.
 Secara umum, fungsional ini dapat dituliskan sebagai:
 \begin{equation}
@@ -541,7 +550,7 @@ Selain mengurangi jumlah fungsi gelombang yang harus dihitung, pendekatan ini ju
 Dengan demikian, pseudopotentials telah menjadi komponen penting dalam aplikasi DFT untuk material kompleks.
 
 \subsection{Metode PAW (Projector Augmented-Wave)}
-Metode Projector Augmented-Wave (PAW) merupakan suatu pendekatan yang menggabungkan keunggulan metode pseudopotential dengan perhitungan \emph{all-electron} yang lebih akurat.
+Metode PAW merupakan suatu pendekatan yang menggabungkan keunggulan metode pseudopotential dengan perhitungan \emph{all-electron} yang lebih akurat.
 Metode PAW memperkenalkan fungsi proyekor dan fungsi tambahan (augmentation functions) untuk mengoreksi bentuk fungsi gelombang di daerah dekat inti, sehingga informasi mengenai nodal struktur asli dapat dipulihkan:
 \begin{equation}
 |\Psi_n\rangle = |\tilde{\Psi}_n\rangle + \sum_i \Big(|\phi_i\rangle - |\tilde{\phi}_i\rangle\Big) \langle \tilde{p}_i |
@@ -549,7 +558,7 @@ Metode PAW memperkenalkan fungsi proyekor dan fungsi tambahan (augmentation func
 \end{equation}
 Pendekatan ini memungkinkan perhitungan yang lebih akurat tanpa harus mengorbankan efisiensi komputasi secara signifikan.
 Dengan PAW, perhitungan sifat-sifat elektron, terutama di daerah inti yang kritis bagi interaksi kimia, dapat dilakukan dengan lebih tepat.
-Metode ini juga sangat berguna dalam menangani sistem dengan konfigurasi elektronik kompleks, misalnya pada material transisi atau sistem dengan defek struktural \citep{Blochl1994}.
+Metode ini juga sangat berguna dalam menangani sistem dengan konfigurasi elektronik kompleks, misalnya pada material transisi atau sistem dengan cacat struktural \citep{Blochl1994}.
 Secara konseptual, PAW dapat dilihat sebagai transformasi linear dari basis pseudopotential ke basis all-electron, yang menjaga keuntungan komputasi dari pendekatan pseudopotential sambil memulihkan informasi penting yang hilang pada daerah inti.
 
 \subsection{Quantum Espresso}
@@ -566,15 +575,15 @@ Sebagai kelanjutan dari tinjauan pustaka di atas, sejumlah penelitian terbaru te
 Studi-studi ini tidak hanya memperkaya pemahaman kita terhadap sifat fundamental material 2D, tetapi juga memberikan kontribusi signifikan dalam peningkatan teknik simulasi dan perhitungan kuantum.
 Penelitian mengenai sifat termal material 2D, misalnya, telah diteliti secara mendalam oleh \citep{Khan2017}, yang menunjukkan konduktivitas termal yang sangat tinggi pada grafena.
 Temuan ini melengkapi studi sebelumnya dan membuka peluang untuk aplikasi pendinginan pasif dalam perangkat nanoelektronik.
-Di samping itu, teori transport kuantum yang dikembangkan oleh Ando \citep{ando_dynamical_2002} menyediakan kerangka teoretis untuk memahami mobilitas dan perilaku elektron dalam sistem dua dimensi, yang sangat krusial untuk pengembangan perangkat berbasis 2D.
+Di samping itu, teori transport kuantum yang dikembangkan oleh Ando \citep{Ando2002} menyediakan kerangka teoretis untuk memahami mobilitas dan perilaku elektron dalam sistem dua dimensi, yang sangat krusial untuk pengembangan perangkat berbasis 2D.
 Analisis struktur dan cacat juga mengalami kemajuan melalui pendekatan eksperimental dan komputasional.
 Penelitian oleh Zhang \citep{Zhang2020} dan \citep{Slotman2013} menyoroti peran penting cacat titik dalam memodifikasi sifat elektronik dan optik material 2D.
 Selain itu, pendekatan representation-independent yang lebih baru, seperti yang diuraikan oleh \citep{Shen2022}, telah meningkatkan keakuratan perhitungan DFT untuk sistem dengan variasi densitas yang kompleks.
 Dalam aspek kelistrikan, penelitian oleh Wang \citep{Wang2017} memberikan wawasan mengenai peningkatan performa elektronik melalui rekayasa heterostruktur, sedangkan studi oleh \citep{Munro2020} dan \citep{Huang2012} menyelidiki mekanisme pembentukan cacat dan pengaruhnya terhadap konduktivitas.
 Pembaruan ulasan tentang material 2D juga disajikan oleh \citep{Bhimanapati2016}, yang memberikan gambaran menyeluruh mengenai tren riset di bidang ini.
 Dari sisi manajemen termal, \citep{Khan2017} menekankan pentingnya pengendalian panas dalam perangkat nanoelektronik berbasis material 2D.
-Sementara itu, metode komputasi juga terus berkembang dengan penerapan teknik machine learning untuk prediksi sifat material, seperti yang ditunjukkan oleh \citep{Zheng2025}.
-Studi mengenai cacat asli (native defects) dalam material 2D juga mendapatkan perhatian melalui penelitian \citep{Weston2018}.
+Sementara itu, metode komputasi juga terus berkembang dengan penerapan teknik \emph{machine learning} untuk prediksi sifat material, seperti yang ditunjukkan oleh \citep{Zheng2025}.
+Studi mengenai cacat asli (\emph{native defects}) dalam material 2D juga mendapatkan perhatian melalui penelitian \citep{Weston2018}.
 Dalam ranah simulasi komputer, karya klasik yang membahas algoritma dan metodologi MD tetap menjadi referensi penting.
 Misalnya, karya \citep{Allen1989}, \citep{Rapaport2004}, dan \citep{Allen1989} terus dijadikan acuan dalam pengembangan metode simulasi dinamika molekuler.
 Di sisi lain, peningkatan dalam perhitungan DFT melalui penggunaan fungsional hibrida telah didorong oleh penelitian \citep{Becke1993}, yang telah membuka jalan bagi pengembangan fungsional pertukaran-korelasi yang lebih akurat.
