--- a/Tugas_Akhir_Latex_Source/konten/bab04.tex
+++ b/Tugas_Akhir_Latex_Source/konten/bab04.tex
@@ -14,10 +14,10 @@ Keberhasilan dalam pemodelan material pada skala atomistik sangat bergantung pad
 
 \subsection{Generasi Struktur melalui Dinamika Molekuler (MD) dengan LAMMPS}
 \label{subsec:md_lammps}
-Struktur atomik yang digunakan sebagai dasar untuk kalkulasi DFT dalam penelitian ini diperoleh dari simulasi dinamika molekuler (MD). Simulasi MD dilaksanakan menggunakan perangkat lunak LAMMPS (\textit{Large-scale Atomic/Molecular Massively Parallel Simulator}) \citep{Plimpton1995} dengan tujuan utama untuk menangkap efek termal dan relaksasi struktural pada supercell monolayer hBN berukuran $4 \times 4 \times 1$ pada temperatur target 800K, 1100K, dan 1225K.
+Struktur atomik yang digunakan sebagai dasar untuk kalkulasi DFT dalam penelitian ini diperoleh dari simulasi dinamika molekuler (MD). Simulasi MD dilaksanakan menggunakan perangkat lunak LAMMPS \citep{Plimpton1995} dengan tujuan utama untuk menangkap efek termal dan relaksasi struktural pada supercell monolayer hBN berukuran $4 \times 4 \times 1$ pada temperatur target 800 K, 1100 K, dan 1225 K.
 
 \subsubsection{Pemilihan dan Keterbatasan Potensial Interatomik ReaxFF}
-Interaksi antar atom dalam simulasi MD dimodelkan menggunakan potensial ReaxFF, yang secara spesifik merujuk pada publikasi "ReaxFF Force Field Development for Gas-Phase hBN Nanostructure Synthesis" \citep{Lele2022}. Pemilihan potensial interatomik merupakan langkah krusial, karena ia secara fundamental menentukan bagaimana sistem berevolusi dan mencapai konfigurasi kesetimbangan pada kondisi termal tertentu. Akurasi potensial MD dalam merepresentasikan interaksi antar-atom—meliputi vibrasi kisi, ekspansi termal, dan relaksasi struktural di sekitar defek—akan secara signifikan mempengaruhi validitas struktur yang dihasilkan, yang kemudian menjadi input langsung untuk kalkulasi DFT. Konsekuensinya, setiap ketidakakuratan pada level MD dapat merambat dan menyebabkan deviasi pada prediksi sifat elektronik dan magnetik.
+Interaksi antar atom dalam simulasi MD dimodelkan menggunakan potensial ReaxFF, yang secara spesifik merujuk pada publikasi \emph{"ReaxFF Force Field Development for Gas-Phase hBN Nanostructure Synthesis"} \citep{Lele2022}. Pemilihan potensial interatomik merupakan langkah krusial, karena ia secara fundamental menentukan bagaimana sistem berevolusi dan mencapai konfigurasi kesetimbangan pada kondisi termal tertentu. Akurasi potensial MD dalam merepresentasikan interaksi antar-atom—meliputi vibrasi kisi, ekspansi termal, dan relaksasi struktural di sekitar defek—akan secara signifikan mempengaruhi validitas struktur yang dihasilkan, yang kemudian menjadi input langsung untuk kalkulasi DFT. Konsekuensinya, setiap ketidakakuratan pada level MD dapat merambat dan menyebabkan deviasi pada prediksi sifat elektronik dan magnetik.
 
 Potensial ReaxFF yang dirujuk \citep{Lele2022} secara spesifik dikembangkan untuk memodelkan aspek kimia fasa gas yang relevan dengan proses sintesis \textit{Chemical Vapor Deposition} (CVD). Fokus utamanya adalah pada mekanisme reaksi, termasuk pembentukan dan pemutusan ikatan kimia, yang dimodelkan melalui konsep orde ikatan yang dinamis. Sebaliknya, penelitian ini bertujuan untuk mensimulasikan stabilitas termal dan relaksasi struktur dari lembaran monolayer hBN yang sudah terbentuk pada temperatur tinggi. Terdapat perbedaan fundamental antara gaya yang mengatur mode fonon dan pergeseran atomik kecil akibat temperatur dalam kristal stabil, dengan gaya yang mengatur reaksi kimia dalam fasa gas. Potensial reaktif seperti ReaxFF, meskipun kuat dalam domainnya, seringkali tidak dioptimalkan untuk mereproduksi secara akurat sifat-sifat fasa padat seperti spektrum fonon atau respons termomekanik yang halus.
 
@@ -52,10 +52,10 @@ Untuk memahami keterbatasan potensial ReaxFF secara lebih fundamental, penting u
 Moda ZA ini memiliki dispersi kuadratik di dekat pusat Zona Brillouin ($\omega \propto q^2$) dan sangat mudah tereksitasi bahkan pada temperatur rendah \citep{CastroNeto2009, Wen2014}. Anharmonicity yang kuat dari moda-moda ini memiliki konsekuensi yang tidak biasa: ketika temperatur meningkat, amplitudo vibrasi keluar-bidang yang besar secara efektif "menarik" atom-atom ke dalam bidang agar lebih berdekatan untuk menjaga volume sel satuan, sebuah efek yang dikenal sebagai efek membran atau \textit{membrane effect} \citep{Mann2017, Yates1972}. Kontraksi dalam-bidang (\textit{in-plane}) ini bersaing dengan ekspansi normal yang disebabkan oleh vibrasi dalam-bidang (\textit{in-plane}). Pada material seperti hBN dan grafena, efek kontraksi yang didorong oleh moda ZA ini mendominasi pada rentang temperatur yang luas, menghasilkan koefisien ekspansi termal negatif (NTE) secara keseluruhan \citep{Du2017, Yoon2011}. Kemampuan sebuah potensial interatomik untuk mereproduksi NTE secara akurat bergantung sepenuhnya pada kemampuannya untuk mendeskripsikan anharmonicity dari moda ZA ini dengan presisi tinggi. Kegagalan dalam hal ini akan menghilangkan mekanisme fisik kunci yang mengatur respons termal material.
 % --- AKHIR BLOK TAMBAHAN 1 ---
 
-Studi evaluatif lain terhadap berbagai potensial untuk material berbasis karbon sp2 (yang secara struktural analog dengan hBN) menunjukkan bahwa beberapa parameterisasi ReaxFF dapat memiliki keterbatasan dalam memprediksi sifat-sifat kesetimbangan seperti energi formasi, modulus elastisitas, atau parameter kisi, dan seringkali gagal mereproduksi spektrum fonon secara kuantitatif \citep{Fthenakis2022, Deringer2020}. Potensi ketidaksesuaian antara domain parameterisasi potensial dengan aplikasi dalam studi ini dapat mengintroduksi ketidakakuratan pada struktur atomik yang dihasilkan MD. Parameter kisi, panjang ikatan, dan relaksasi atomik lokal di sekitar defek mungkin tidak sepenuhnya merepresentasikan kondisi fisik sebenarnya. Hal ini menjadi sangat relevan ketika menafsirkan fenomena yang sensitif terhadap distorsi struktural, seperti ketergantungan temperatur pada celah pita dan induksi magnetisme oleh defek, yang akan dibahas secara mendalam di sub-bab berikutnya.
+Studi evaluatif lain terhadap berbagai potensial untuk material berbasis karbon $\emph{sp}^2$ (yang secara struktural analog dengan hBN) menunjukkan bahwa beberapa parameterisasi ReaxFF dapat memiliki keterbatasan dalam memprediksi sifat-sifat kesetimbangan seperti energi formasi, modulus elastisitas, atau parameter kisi, dan seringkali gagal mereproduksi spektrum fonon secara kuantitatif \citep{Fthenakis2022, Deringer2020}. Potensi ketidaksesuaian antara domain parameterisasi potensial dengan aplikasi dalam studi ini dapat mengintroduksi ketidakakuratan pada struktur atomik yang dihasilkan MD. Parameter kisi, panjang ikatan, dan relaksasi atomik lokal di sekitar defek mungkin tidak sepenuhnya merepresentasikan kondisi fisik sebenarnya. Hal ini menjadi sangat relevan ketika menafsirkan fenomena yang sensitif terhadap distorsi struktural, seperti ketergantungan temperatur pada celah pita dan induksi magnetisme oleh defek, yang akan dibahas secara mendalam di sub-bab berikutnya.
 
 \subsubsection{Implikasi untuk Pemodelan Sifat Termal}
-Keterbatasan yang paling signifikan dari potensial ReaxFF dalam konteks studi ini adalah kemungkinannya untuk gagal menangkap fisika anharmonic dari mode fonon frekuensi rendah. Secara spesifik, fenomena Ekspansi Termal Negatif (\textit{Negative Thermal Expansion}, NTE) pada material 2D seperti hBN dan grafena, di mana kisi mengalami kontraksi saat dipanaskan, berasal dari eksitasi termal mode fonon lentur (moda ZA atau \textit{flexural phonons}) \citep{Sarikurt2022}. Kemampuan untuk memodelkan NTE secara akurat bergantung pada deskripsi yang sangat presisi dari anharmonicity potensial yang mengatur vibrasi di luar bidang (out-of-plane). Mengingat fokus parameterisasi potensial ReaxFF yang digunakan adalah pada energi reaksi fasa gas \citep{Lele2022}, sangat diragukan bahwa potensial ini mampu mereproduksi perilaku moda ZA yang subtil ini. Konsekuensi dari keterbatasan ini akan dibahas lebih lanjut pada Bagian \ref{subsec:hbn_murni_termal}.
+Keterbatasan yang paling signifikan dari potensial ReaxFF dalam konteks studi ini adalah kemungkinannya untuk gagal menangkap fisika anharmonik dari mode fonon frekuensi rendah. Secara spesifik, fenomena Ekspansi Termal Negatif (\textit{Negative Thermal Expansion}, NTE) pada material 2D seperti hBN dan grafena, di mana kisi mengalami kontraksi saat dipanaskan, berasal dari eksitasi termal mode fonon lentur (moda ZA atau \textit{flexural phonons}) \citep{Sarikurt2022}. Kemampuan untuk memodelkan NTE secara akurat bergantung pada deskripsi yang sangat presisi dari anharmoninitas potensial yang mengatur vibrasi di luar bidang (OP). Mengingat fokus parameterisasi potensial ReaxFF yang digunakan adalah pada energi reaksi fasa gas \citep{Lele2022}, sangat diragukan bahwa potensial ini mampu mereproduksi perilaku moda ZA yang subtil ini. Konsekuensi dari keterbatasan ini akan dibahas lebih lanjut pada Bagian \ref{subsec:hbn_murni_termal}.
 
 Untuk meningkatkan kepercayaan terhadap struktur MD, penggunaan potensial interatomik alternatif yang secara eksplisit diparameterisasi untuk sifat fasa padat akan sangat bermanfaat. Contohnya termasuk potensial klasik yang lebih canggih seperti \textit{Extended Tersoff Potentials} (ExTeP) yang dirancang untuk deskripsi defek yang lebih baik \citep{Los2017}, atau yang lebih ideal, \textit{Machine-Learning Interatomic Potentials} (MLIPs) yang dilatih menggunakan data DFT untuk mencapai akurasi mendekati DFT dengan biaya komputasi yang jauh lebih rendah, dan telah terbukti berhasil memprediksi sifat termal dan mekanik hBN \citep{NietoLuna2025, Choyal2024}. Tanpa validasi silang semacam ini, hasil-hasil yang paling menarik dalam penelitian ini harus diinterpretasikan dengan kesadaran bahwa mereka mungkin merupakan artefak dari keterbatasan potensial yang digunakan.
 
@@ -230,7 +230,7 @@ Kehadiran defek titik dapat secara dramatis mengubah sifat elektronik dan magnet
 
 \subsection{Monolayer hBN dengan Defek Antisite N$_B$ ("NN defect")}
 \label{subsec:hbn_defek_nb}
-Defek antisite N$_B$ mengintroduksi perubahan signifikan pada struktur elektronik. Hasil kalkulasi dirangkum dalam Tabel \ref{tab:hbn_defek_nb} dan diilustrasikan pada Gambar \ref{fig:hbn_NN_800K} hingga \ref{fig:hbn_NN_1225K_2D_plots}.
+Defek antisite N$_B$ mengintroduksi perubahan signifikan pada struktur elektronik. Hasil kalkulasi dirangkum dalam Tabel \ref{tab:hbn_defek_nb} dan diilustrasikan pada Gambar \ref{fig:hbn_NN_800K} hingga \ref{fig:hbn_NB_1225K_2D_plots}.
 
 \begin{table}[h!]
   \centering
