--- a/Tugas_Akhir_Latex_Source/main.tex
+++ b/Tugas_Akhir_Latex_Source/main.tex
@@ -48,7 +48,8 @@
     \input{./halaman-depan/pengesahan}
     %\halamanKosong
 
-    \input{./halaman-depan/pernyataan-keaslian.tex}
+    % PERNYATAAN ORISINALITAS
+    \input{./halaman-depan/pernyataan-keaslian}
 
     % ABSTRAK
     \input{./halaman-depan/abstrak}
